// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stepper should click on center button 1`] = `
<DocumentFragment>
  .cache-vibxio {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.cache-qge7nr {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-qge7nr[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-qge7nr[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-qge7nr>.etyrq8m4 {
  fill: #4f0599;
}

.cache-qge7nr:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-kdwrkq {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-kdwrkq.cache-kdwrkq {
  vertical-align: middle;
}

.cache-1nmwva1 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-1nmwva1.cache-1nmwva1:active {
  opacity: 0.5;
}

.cache-1nmwva1[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nmwva1[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nmwva1[aria-disabled="false"]:active {
  opacity: 0.5;
}

.cache-1nmwva1:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-1nmwva1:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-zw51xp {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-zw51xp.cache-zw51xp {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-vibxio e7ah3bn0"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-kdwrkq e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Input"
      class="etyrq8m2 e1kgqxfn0 cache-1nmwva1 e7ah3bn0"
      type="button"
    >
      <input
        class="cache-wiike2 etyrq8m1"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="cache-wiike2 etyrq8m1"
      />
    </button>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-zw51xp e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should click on min button 1`] = `
<DocumentFragment>
  .cache-vibxio {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.cache-qge7nr {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-qge7nr[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-qge7nr[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-qge7nr>.etyrq8m4 {
  fill: #4f0599;
}

.cache-qge7nr:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-kdwrkq {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-kdwrkq.cache-kdwrkq {
  vertical-align: middle;
}

.cache-1nmwva1 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-1nmwva1.cache-1nmwva1:active {
  opacity: 0.5;
}

.cache-1nmwva1[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nmwva1[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nmwva1[aria-disabled="false"]:active {
  opacity: 0.5;
}

.cache-1nmwva1:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-1nmwva1:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-zw51xp {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-zw51xp.cache-zw51xp {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-vibxio e7ah3bn0"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-kdwrkq e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Input"
      class="etyrq8m2 e1kgqxfn0 cache-1nmwva1 e7ah3bn0"
      type="button"
    >
      <input
        class="cache-wiike2 etyrq8m1"
        name="stepper"
        style="width: 25px;"
        value="8"
      />
      <span
        class="cache-wiike2 etyrq8m1"
      />
    </button>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-zw51xp e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should click on plus button with a step value 1`] = `
<DocumentFragment>
  .cache-vibxio {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.cache-qge7nr {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-qge7nr[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-qge7nr[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-qge7nr>.etyrq8m4 {
  fill: #4f0599;
}

.cache-qge7nr:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-kdwrkq {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-kdwrkq.cache-kdwrkq {
  vertical-align: middle;
}

.cache-1nmwva1 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-1nmwva1.cache-1nmwva1:active {
  opacity: 0.5;
}

.cache-1nmwva1[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nmwva1[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nmwva1[aria-disabled="false"]:active {
  opacity: 0.5;
}

.cache-1nmwva1:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-1nmwva1:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-zw51xp {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-zw51xp.cache-zw51xp {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-vibxio e7ah3bn0"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-kdwrkq e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Input"
      class="etyrq8m2 e1kgqxfn0 cache-1nmwva1 e7ah3bn0"
      type="button"
    >
      <input
        class="cache-wiike2 etyrq8m1"
        name="stepper"
        style="width: 35px;"
        value="30"
      />
      <span
        class="cache-wiike2 etyrq8m1"
      />
    </button>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-zw51xp e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should focus input and modify value 1`] = `
<DocumentFragment>
  .cache-vibxio {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.cache-qge7nr {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-qge7nr[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-qge7nr[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-qge7nr>.etyrq8m4 {
  fill: #4f0599;
}

.cache-qge7nr:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-kdwrkq {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-kdwrkq.cache-kdwrkq {
  vertical-align: middle;
}

.cache-1nmwva1 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-1nmwva1.cache-1nmwva1:active {
  opacity: 0.5;
}

.cache-1nmwva1[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nmwva1[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nmwva1[aria-disabled="false"]:active {
  opacity: 0.5;
}

.cache-1nmwva1:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-1nmwva1:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-zw51xp {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-zw51xp.cache-zw51xp {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-vibxio e7ah3bn0"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-kdwrkq e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Input"
      class="etyrq8m2 e1kgqxfn0 cache-1nmwva1 e7ah3bn0"
      type="button"
    >
      <input
        class="cache-wiike2 etyrq8m1"
        name="stepper"
        style="width: 35px;"
        type="text"
        value="20"
      />
      <span
        class="cache-wiike2 etyrq8m1"
      />
    </button>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-zw51xp e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should focus input and modify value onMaxCrossed 1`] = `
<DocumentFragment>
  .cache-vibxio {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.cache-qge7nr {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-qge7nr[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-qge7nr[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-qge7nr>.etyrq8m4 {
  fill: #4f0599;
}

.cache-qge7nr:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-kdwrkq {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-kdwrkq.cache-kdwrkq {
  vertical-align: middle;
}

.cache-1nmwva1 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-1nmwva1.cache-1nmwva1:active {
  opacity: 0.5;
}

.cache-1nmwva1[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nmwva1[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nmwva1[aria-disabled="false"]:active {
  opacity: 0.5;
}

.cache-1nmwva1:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-1nmwva1:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-1esk5pk {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1esk5pk[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1esk5pk[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1esk5pk:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-zw51xp {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-zw51xp.cache-zw51xp {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-vibxio e7ah3bn0"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-kdwrkq e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Input"
      class="etyrq8m2 e1kgqxfn0 cache-1nmwva1 e7ah3bn0"
      type="button"
    >
      <input
        class="cache-wiike2 etyrq8m1"
        name="stepper"
        style="width: 45px;"
        type="text"
        value="100"
      />
      <span
        class="cache-wiike2 etyrq8m1"
      />
    </button>
    <button
      aria-disabled="true"
      aria-label="Plus"
      class="etyrq8m3 e1kgqxfn0 cache-1esk5pk e7ah3bn0"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-zw51xp e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should focus input and modify value onMinCrossed 1`] = `
<DocumentFragment>
  .cache-vibxio {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.cache-1esk5pk {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1esk5pk[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1esk5pk[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1esk5pk:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-kdwrkq {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-kdwrkq.cache-kdwrkq {
  vertical-align: middle;
}

.cache-1nmwva1 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-1nmwva1.cache-1nmwva1:active {
  opacity: 0.5;
}

.cache-1nmwva1[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nmwva1[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nmwva1[aria-disabled="false"]:active {
  opacity: 0.5;
}

.cache-1nmwva1:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-1nmwva1:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-qge7nr {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-qge7nr[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-qge7nr[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-qge7nr>.etyrq8m4 {
  fill: #4f0599;
}

.cache-qge7nr:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-zw51xp {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-zw51xp.cache-zw51xp {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-vibxio e7ah3bn0"
  >
    <button
      aria-disabled="true"
      aria-label="Minus"
      class="etyrq8m3 e1kgqxfn0 cache-1esk5pk e7ah3bn0"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-kdwrkq e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Input"
      class="etyrq8m2 e1kgqxfn0 cache-1nmwva1 e7ah3bn0"
      type="button"
    >
      <input
        class="cache-wiike2 etyrq8m1"
        name="stepper"
        style="width: 35px;"
        type="text"
        value="10"
      />
      <span
        class="cache-wiike2 etyrq8m1"
      />
    </button>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-zw51xp e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should increase and decrease input with arrow up and down 1`] = `
<DocumentFragment>
  .cache-vibxio {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.cache-qge7nr {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-qge7nr[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-qge7nr[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-qge7nr>.etyrq8m4 {
  fill: #4f0599;
}

.cache-qge7nr:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-kdwrkq {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-kdwrkq.cache-kdwrkq {
  vertical-align: middle;
}

.cache-1nmwva1 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-1nmwva1.cache-1nmwva1:active {
  opacity: 0.5;
}

.cache-1nmwva1[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nmwva1[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nmwva1[aria-disabled="false"]:active {
  opacity: 0.5;
}

.cache-1nmwva1:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-1nmwva1:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-1esk5pk {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1esk5pk[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1esk5pk[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1esk5pk:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-zw51xp {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-zw51xp.cache-zw51xp {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-vibxio e7ah3bn0"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-kdwrkq e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Input"
      class="etyrq8m2 e1kgqxfn0 cache-1nmwva1 e7ah3bn0"
      type="button"
    >
      <input
        class="cache-wiike2 etyrq8m1"
        name="stepper"
        style="width: 45px;"
        type="text"
        value="100"
      />
      <span
        class="cache-wiike2 etyrq8m1"
      />
    </button>
    <button
      aria-disabled="true"
      aria-label="Plus"
      class="etyrq8m3 e1kgqxfn0 cache-1esk5pk e7ah3bn0"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-zw51xp e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders correctly 1`] = `
<DocumentFragment>
  .cache-vibxio {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.cache-qge7nr {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-qge7nr[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-qge7nr[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-qge7nr>.etyrq8m4 {
  fill: #4f0599;
}

.cache-qge7nr:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-kdwrkq {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-kdwrkq.cache-kdwrkq {
  vertical-align: middle;
}

.cache-1nmwva1 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-1nmwva1.cache-1nmwva1:active {
  opacity: 0.5;
}

.cache-1nmwva1[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nmwva1[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nmwva1[aria-disabled="false"]:active {
  opacity: 0.5;
}

.cache-1nmwva1:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-1nmwva1:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-zw51xp {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-zw51xp.cache-zw51xp {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-vibxio e7ah3bn0"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-kdwrkq e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Input"
      class="etyrq8m2 e1kgqxfn0 cache-1nmwva1 e7ah3bn0"
      type="button"
    >
      <input
        class="cache-wiike2 etyrq8m1"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="cache-wiike2 etyrq8m1"
      >
        unit
      </span>
    </button>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-zw51xp e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders correctly disabled 1`] = `
<DocumentFragment>
  .cache-beb8bp {
  background-color: #f6f5f7;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.cache-beb8bp>.etyrq8m3,
.cache-beb8bp .etyrq8m1,
.cache-beb8bp .etyrq8m2 {
  background-color: #f6f5f7;
  border: none;
  color: #b2b6c3;
  opacity: 1;
  cursor: not-allowed;
}

.cache-1esk5pk {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-1esk5pk[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1esk5pk[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1esk5pk:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-kdwrkq {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-kdwrkq.cache-kdwrkq {
  vertical-align: middle;
}

.cache-1nmwva1 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-1nmwva1.cache-1nmwva1:active {
  opacity: 0.5;
}

.cache-1nmwva1[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nmwva1[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nmwva1[aria-disabled="false"]:active {
  opacity: 0.5;
}

.cache-1nmwva1:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-1nmwva1:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-zw51xp {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-zw51xp.cache-zw51xp {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-beb8bp e7ah3bn0"
    disabled=""
  >
    <button
      aria-disabled="true"
      aria-label="Minus"
      class="etyrq8m3 e1kgqxfn0 cache-1esk5pk e7ah3bn0"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-kdwrkq e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-disabled="true"
      aria-label="Input"
      class="etyrq8m2 e1kgqxfn0 cache-1nmwva1 e7ah3bn0"
      disabled=""
      type="button"
    >
      <input
        class="cache-wiike2 etyrq8m1"
        disabled=""
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="cache-wiike2 etyrq8m1"
        disabled=""
      >
        unit
      </span>
    </button>
    <button
      aria-disabled="true"
      aria-label="Plus"
      class="etyrq8m3 e1kgqxfn0 cache-1esk5pk e7ah3bn0"
      disabled=""
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-zw51xp e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders large size 1`] = `
<DocumentFragment>
  .cache-vibxio {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 48px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.cache-qge7nr {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 38px;
  margin: 0 4px;
}

.cache-qge7nr[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-qge7nr[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-qge7nr>.etyrq8m4 {
  fill: #4f0599;
}

.cache-qge7nr:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-kdwrkq {
  fill: #dce1eb;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-kdwrkq.cache-kdwrkq {
  vertical-align: middle;
}

.cache-1nmwva1 {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 96px);
}

.cache-1nmwva1.cache-1nmwva1:active {
  opacity: 0.5;
}

.cache-1nmwva1[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1nmwva1[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1nmwva1[aria-disabled="false"]:active {
  opacity: 0.5;
}

.cache-1nmwva1:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-1nmwva1:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-zw51xp {
  fill: currentColor;
  height: 26px;
  width: 26px;
  min-width: 26px;
  min-height: 26px;
}

.cache-zw51xp.cache-zw51xp {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-vibxio e7ah3bn0"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-kdwrkq e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Input"
      class="etyrq8m2 e1kgqxfn0 cache-1nmwva1 e7ah3bn0"
      type="button"
    >
      <input
        class="cache-wiike2 etyrq8m1"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="cache-wiike2 etyrq8m1"
      />
    </button>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m3 e1kgqxfn0 cache-qge7nr e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-zw51xp e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Stepper should renders small size 1`] = `
<DocumentFragment>
  .cache-587ul8 {
  background-color: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-align-self: stretch;
  -ms-flex-item-align: stretch;
  align-self: stretch;
  font-weight: 500;
  height: 32px;
  border: 1px solid #dce1eb;
  border-radius: 4px;
}

.cache-1jwsekx {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: calc(100% - 8px);
  position: relative;
  border-radius: 4px;
  width: 22px;
  margin: 0 4px;
}

.cache-1jwsekx[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-1jwsekx[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-1jwsekx>.etyrq8m4 {
  fill: #4f0599;
}

.cache-1jwsekx:hover:not([disabled]) {
  background: #eeeeff;
}

.cache-1hby2r9 {
  fill: #dce1eb;
  height: 22px;
  width: 22px;
  min-width: 22px;
  min-height: 22px;
}

.cache-1hby2r9.cache-1hby2r9 {
  vertical-align: middle;
}

.cache-27krjg {
  border: 0;
  transition-property: opacity;
  transition-duration: 0.15s;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-color: transparent;
  padding: 0;
  margin: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: calc(100% - 8px);
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  outline: none;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  border-radius: 4px;
  border: 1px solid transparent;
  max-width: calc(100% - 64px);
}

.cache-27krjg.cache-27krjg:active {
  opacity: 0.5;
}

.cache-27krjg[aria-disabled="true"] {
  opacity: 0.5;
  cursor: not-allowed;
}

.cache-27krjg[aria-disabled="false"] {
  cursor: pointer;
  touch-action: manipulation;
}

.cache-27krjg[aria-disabled="false"]:active {
  opacity: 0.5;
}

.cache-27krjg:hover:not([disabled], :focus) {
  border: 1px solid #4f0599;
}

.cache-27krjg:focus-within:not([disabled]) {
  box-shadow: 0 0 2px 2px rgba(79,5,153,0.3);
  border: 1px solid #4f0599;
}

.cache-wiike2 {
  color: #4a4f62;
  background-color: transparent;
  font-size: 16;
  border: none;
  text-align: right;
  outline: none;
  position: relative;
  margin-right: 4;
  max-width: 100%;
  font-weight: 500;
  text-align: center;
}

.cache-d0imbx {
  fill: currentColor;
  height: 22px;
  width: 22px;
  min-width: 22px;
  min-height: 22px;
}

.cache-d0imbx.cache-d0imbx {
  vertical-align: middle;
}

<div
    class="etyrq8m0 cache-587ul8 e7ah3bn0"
  >
    <button
      aria-disabled="false"
      aria-label="Minus"
      class="etyrq8m3 e1kgqxfn0 cache-1jwsekx e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-1hby2r9 e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H5V11H19V13Z"
        />
      </svg>
    </button>
    <button
      aria-disabled="false"
      aria-label="Input"
      class="etyrq8m2 e1kgqxfn0 cache-27krjg e7ah3bn0"
      type="button"
    >
      <input
        class="cache-wiike2 etyrq8m1"
        name="stepper"
        style="width: 35px;"
        value="10"
      />
      <span
        class="cache-wiike2 etyrq8m1"
      />
    </button>
    <button
      aria-disabled="false"
      aria-label="Plus"
      class="etyrq8m3 e1kgqxfn0 cache-1jwsekx e7ah3bn0"
      type="button"
    >
      <svg
        class="etyrq8m4 etwatq50 cache-d0imbx e7ah3bn0"
        viewBox="0 0 24 24"
      >
        <path
          d="M19,13H13V19H11V13H5V11H11V5H13V11H19V13Z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
